chapter-5 Services/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  - port: 80
    targetPort: 8080 # port on containers forwarded to
  selector:
    app: kubia
